# vision_torch_learn

./: .gitignore  LICENSE  README.md  README_zh.md  cos_try.py  optimizer_compare.py  optimizer_compare_insights.py  pyproject.toml  test.py
learn_wiki/: class类.md  costry.md  finetune.md  gpuopt.md  p1_cifar10.md  p1_cifar10_original.md  quantilization.md  优化器.md
p1/: model.py  model_cnn.py  model_cnn0.py  model_resnet18.py
p1-models/: gpuopt.py  model_resnet18.py  model_resnet18_gpu.py  model_resnet18_gpuopt.py  model_vggnet.py
p2-onnx/: model_resnet18_layout.py  raspi_run.py
