[project]
name = "vision_torch_learn"
version = "0.1.0"
description = "Edge-to-cloud vision training pipeline"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.8.0",
    "pillow>=9.0",
    "matplotlib>=3.5",
    "tqdm>=4.60",
    "scikit-learn>=1.3",
    "torchinfo>=1.8",
]

[project.optional-dependencies]
dev = [
    "torch==2.4.0",
    "torchvision==0.19.0",
]
cuda = [
    "torch==2.4.0",
    "torchvision==0.19.0",
]
rpi = [
    "onnxruntime>=1.15.0; platform_machine == 'aarch64' ",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"